--- a/DistributedInvoke/pom.xml
+++ b/DistributedInvoke/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>EzAsync</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.1.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<artifactId>DistributedInvoke</artifactId>
