--- a/EzAsync/pom.xml
+++ b/EzAsync/pom.xml
@@ -17,6 +17,12 @@
 			<artifactId>annotations</artifactId>
 			<version>5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.1.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
