--- a/DistributedInvoke/pom.xml
+++ b/DistributedInvoke/pom.xml
@@ -36,6 +36,12 @@
 			<version>6.1.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<artifactId>DistributedInvoke</artifactId>
